discussion/kv_engine/188370/188370_rev15_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55672: RangeScan don't invoke sendResponse with RangeScan lock

Using std::move, the buffer of scanned data can be moved to the outer
edge of the RangeScan continue path so it can be "sent" with none of
the RangeScan locks held.

Change-Id: Ib814f0875cffc81ffb59e1ea7dc94d5195f3e765

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-03-28 15:31:33.000000000
Message: 
Uploaded patch set 15.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-28 16:07:12.000000000
Message: 
Patch Set 15: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/44125/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:55:40:
error: no type named "engine_errc" in namespace "cb"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/44125/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23121/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.cc:24:31: error: out-of-line definition of "send" does not match any declaration in "RangeScanContinueResult" [clang-diagnostic-error]
void RangeScanContinueResult::send(CookieIface& cookie,
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:55:40: error: no type named "engine_errc" in namespace "cb" [clang-diagnostic-error]
    void send(CookieIface& cookie, cb::engine_errc status);
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:74:18: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual void complete(CookieIface& cookie);
    ~~~~~~~~     ^
                                               override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:87:18: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual void complete(CookieIface& cookie);
    ~~~~~~~~     ^
                                               override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:104:18: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual void complete(CookieIface& cookie);
    ~~~~~~~~     ^
                                               override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:117:18: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual void complete(CookieIface& cookie);
    ~~~~~~~~     ^
                                               override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.h:127:18: warning: prefer using "override" or (rarely) "final" instead of "virtual" [modernize-use-override]
    virtual void complete(CookieIface& cookie) {
    ~~~~~~~~     ^
                                               override

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23121/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_types.cc:24:31:
error: out-of-line definition of "send" does not match any declaration in "RangeScanContinueResult" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/23121/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25653/ : FAILURE

Compile error at [2023-03-28T15:45:40.349Z] ../kv_engine/engines/ep/src/range_scans/range_scan_types.h:55:36:
error: ?cb::engine_errc? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25653/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24781/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24781/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23427/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52599/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12854/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1931/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25190/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26508/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33605/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12935/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
